kubernetes/driver-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
      - name: driver-service
        image: janpeterd/driver-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
