kubernetes/mysql-gp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-gp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-gp
  template:
    metadata:
      labels:
        app: mysql-gp
    spec:
      containers:
      - name: mysql-gp
        image: mysql:latest
        ports:
        - containerPort: 3307
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-gp-pvc
