kubernetes/team-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-service
  template:
    metadata:
      labels:
        app: team-service
    spec:
      containers:
      - name: team-service
        image: janpeterd/team-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
