kubernetes/redis-ratelimit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-ratelimit
spec:
  selector:
    app: redis-ratelimit
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
