kubernetes/services.yaml
# Services for all microservices
apiVersion: v1
kind: Service
metadata:
  name: driver-service
spec:
  selector:
    app: driver-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: team-service
spec:
  selector:
    app: team-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: gp-service
spec:
  selector:
    app: gp-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  selector:
    app: image-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
